[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "my_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
transformers = "^4.28.1"
torch = "^2.0.0"
black = "^23.3.0"
peft = "^0.2.0"
datasets = "^2.12.0"
accelerate = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
